--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,39 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+/* CONTAINERS  */
+.container{
+    width: 100%;
+    height: 100vh;
+    position: relative;
+}
+.layout{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+}
+/* BG AND COLOR  */
+.bg_red{
+    background-color: #FF0000;
+}
+.text-yellow{
+    color: yellow;
+}
+
+.text-green{
+    color: green;
+}
+/* TEXT  */
+h2{
+    font-size: 80px;
+    word-spacing: 30px;
+    text-align: center;
+}
