--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,6 @@
     height: 100vh;
     position: relative;
 }
-.layout{
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
 .content{
     position: absolute;
     top: 50%;
@@ -24,7 +18,13 @@
 }
 /* BG AND COLOR  */
 .bg_red{
-    background-color: #FF0000;
+    background-color: red;
+}
+.bg_green{
+    background-color: green;
+}
+.bg_yellow{
+    background-color:yellow;
 }
 .text-yellow{
     color: yellow;
